# doccompass

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.agent/skills/list_available_docs/: SKILL.md
.agent/skills/search_documentation/: SKILL.md
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260218_000001_phase3_ingestion_tables.py  20260218_000002_phase8_embedding_support.py  20260219_000003_add_base_url_to_documentation.py
backend/app/: celery_app.py  config.py  db.py  main.py  redis_client.py  tasks.py
backend/app/api/: __init__.py  documentation.py  ingestion.py
backend/app/api/dtos/: __init__.py  documentation.py  ingestion.py
backend/app/mcp/: __init__.py  server.py
backend/app/models/: __init__.py  ingestion.py
backend/app/services/: __init__.py  crawler.py  documentation.py  embedding.py  ingestion.py  parser.py
backend/app/tasks/: __init__.py  ingestion.py  ping.py
backend/tests/: test_crawler_adapter.py  test_documentation_api.py  test_embedding_service.py  test_health.py  test_import_smoke.py  test_ingestion_api.py  test_ingestion_pipeline.py  test_mcp_wrapper.py  test_parser.py  test_repo_structure.py  test_reproduce_path_issue.py  test_settings.py
cli/: pyproject.toml
cli/src/doccompass_cli/: api.py  config.py  main.py
cli/src/doccompass_cli/commands/: __init__.py  docs.py  ingestion.py
cli/tests/: test_cli.py
docs/dev/: IMPLEMENTATION.MD  PHASE1-INFRA-SETUP.md  PHASE2-REPO-STRUCTURE.md  REPO-CONVENTIONS.md
docs/dev/phases/: README-API-ENDPOINTS.md  README-CRAWLING-INGESTION.md  README-EMBEDDING-INDEXING.md  README-FRONTEND-SETUP.md  (+5 more)
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.ts  styles.css
frontend/tests/: dashboard.test.tsx  explorer.test.tsx  test_structure.md
scripts/: bootstrap.sh
(+22 files in other folders)
